k8s/domains/entitlements/infra/api/overlays/prod-eu/entitlements-api-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: entitlements-api-depl
spec:
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: entitlements-api
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
