k8s/domains/entitlements/infra/api/overlays/prod-eu/entitlements-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: entitlements-api-public
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`api.tma.com`) && PathPrefix(`/v1/entitlements`)
      services:
        - name: entitlements-api-srv
          port: 3000
  tls:
    certResolver: le
    domains:
      - main: api.tma.com
